@@ -7,6 +7,8 @@
     {include file="event/eventlistbox_overdue.html" overdue="1"}
 {/if}
 
+{if empty($overdue_events_only)}
+
 {$eventlist_mode = true}
 
 <H1>{$layout.pagetitle}</H1>
@@ -27,4 +29,5 @@
         {include file="event/eventlistbox.html" overdue="0"}
     </TBODY>
 </TABLE>
+{/if}
 {/block}
