@@ -11,7 +11,7 @@
     <THEAD>
         <TR class="superdark">
             <TD class="bold nobr" colspan="6">
-                <i class="lms-ui-icon-content lms-ui-icon-timetable"></i>{trans("Overdue events")}
+                <i class="lms-ui-icon-content lms-ui-icon-timetable"></i>{trans("Overdue events assigned to me")}
             </TD>
         </TR>
     </THEAD>
